--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -472,3 +472,17 @@ h6,
 .zoom:hover {
   transform: scale(1.7); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+  }
+  
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+  
